tests/negative/gold/import7-test.gold
tests/negative/import7-test.toit:5:20: error: Not at dedent
import math as foo import math as bar
                   ^~~~~~
Compilation failed
